--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <h1>halo!</h1>
     <h2>działamy!</h2>
 
-    <p>bla bla bla patrz!</p>
+    <p>bla bla bla loook!</p>
+    <p>hahah heheeh</p>
 </body>
 </html>
